--- a/html.html
+++ b/html.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>GitHub</h1>
+    <p>new version added</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum fugiat quis ratione exeriores eligendi debitis minima, eaque labore unde temporibus facilis nihil.</p>
 </body>
 </html>
